# Analise_Vendas

./: Faturamento.xlsx  README.md  pyproject.toml
